@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-AM_CPPFLAGS = -Wall \
+INCLUDES = -Wall \
 	$(GLIB_CFLAGS) \
 	$(GTK_CFLAGS) \
 	$(GNOMEUI_CFLAGS) \
